# Recforge

./: .gitignore
docs/superpowers/plans/: 2026-06-06-windows-screen-recorder.md
outputs/: Abrir Tela Recorder.cmd  Encerrar Gravacao.cmd  Iniciar Gravacao.cmd  Mostrar Tela Recorder.cmd  Mutar Microfone.cmd  Pausar Retomar Gravacao.cmd
work/tela-recorder/: README.md  index.html  package-lock.json  package.json  vite.config.ts
work/tela-recorder/electron/: main.cjs  overlay.html  preload.cjs
work/tela-recorder/scripts/: make-icon.cjs  smoke-record.cjs
work/tela-recorder/src/: App.tsx  recorderApi.ts  styles.css
work/tela-recorder/src-tauri/: Cargo.toml  tauri.conf.json
work/tela-recorder/src-tauri/capabilities/: default.json
work/tela-recorder/src-tauri/src/: lib.rs  main.rs
