[package]
name = "tela-recorder"
version = "0.1.0"
description = "Windows-first screen recorder"
authors = ["Codex"]
edition = "2021"

[lib]
name = "tela_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
